--- a/examples/csr/index.html
+++ b/examples/csr/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>CSR example</title>
+
+    <link data-trunk rel="tailwind-css" href="src/tailwind.css" />
   </head>
 </html>
