chore(csr example): use animation for enter instead of transition

--- a/examples/csr/index.html
+++ b/examples/csr/index.html
@@ -6,6 +6,6 @@
 
     <title>CSR example</title>
 
-    <link data-trunk rel="tailwind-css" href="src/tailwind.css" />
+    <link data-trunk rel="tailwind-css" href="src/style.css" />
   </head>
 </html>
